@@ -95,6 +95,7 @@ Functions not covered by "make check":
 - MHD_del_response_header 
 - MHD_get_response_headers
 - MHD_tls_connection_close
+- MHD_create_response_from_fd & sendfile support (!)
 
 
 Missing documentation:
