@@ -1,3 +1,8 @@
+Sun Jul 25 14:57:47 CEST 2010
+	Adding support for sendfile on Linux.  Adding support
+	for systemd-style passing of an existing listen socket
+	as an option. -CG
+
 Sun Jul 25 11:10:45 CEST 2010
 	Changed code to use external libgnutls code instead of
 	the "fork".  Minor API changes for setting TLS options. -CG
